// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLeadBlock tests should not render technical Specification tab 1`] = `
<div>
  <div
    class="Tabs Tabs--primary sdpTabLeadBlock"
  >
    <div
      class="TabsBar"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root tabStyles-ContainerRoot-77 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root tabStyles-TabsRoot-78"
          >
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-one"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-79 Mui-selected"
                  data-gtm="{\\"id\\":\\"selector-tabs4\\",\\"label\\":\\"MC: sdp.leadBlock.about\\",\\"action\\":\\"Selector – Tabs\\"}"
                  id="tab-one"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    MC: sdp.leadBlock.about
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-80 PrivateTabIndicator-colorPrimary-81 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-one"
      class="MuiGrid-root TabPanel MuiGrid-item"
      heading="MC: sdp.leadBlock.about"
      id="tabpanel-one"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-84 TabPanelBox"
      >
        <div
          class="section Section Section--white"
        >
          <div
            class="Container"
          >
            <div
              class="MuiContainer-root MuiContainer-maxWidthXl"
            >
              <div
                class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
                >
                  <div
                    class="LeadBlockContentSection"
                  >
                    <div
                      class="MuiTypography-root Typography MuiTypography-body1"
                    >
                      Long Dec System 2 NO
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render 1`] = `
<div>
  <div
    class="Tabs Tabs--primary sdpTabLeadBlock"
  >
    <div
      class="TabsBar"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root tabStyles-ContainerRoot-1 MuiContainer-maxWidthXl"
        >
          <div
            class="MuiTabs-root tabStyles-TabsRoot-2"
          >
            <div
              class="MuiTabs-scrollable"
              style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
            />
            <div
              class="MuiTabs-scroller MuiTabs-scrollable"
              style="margin-bottom: 0px;"
            >
              <div
                aria-label="tabs"
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="tabpanel-one"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-3 Mui-selected"
                  data-gtm="{\\"id\\":\\"selector-tabs4\\",\\"label\\":\\"MC: sdp.leadBlock.about\\",\\"action\\":\\"Selector – Tabs\\"}"
                  id="tab-one"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    MC: sdp.leadBlock.about
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="tabpanel-two"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-3"
                  data-gtm="{\\"id\\":\\"selector-tabs4\\",\\"label\\":\\"MC: sdp.leadBlock.technicalSpecification\\",\\"action\\":\\"Selector – Tabs\\"}"
                  id="tab-two"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    MC: sdp.leadBlock.technicalSpecification
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-4 PrivateTabIndicator-colorPrimary-5 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-one"
      class="MuiGrid-root TabPanel MuiGrid-item"
      heading="MC: sdp.leadBlock.about"
      id="tabpanel-one"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-8 TabPanelBox"
      >
        <div
          class="section Section Section--white"
        >
          <div
            class="Container"
          >
            <div
              class="MuiContainer-root MuiContainer-maxWidthXl"
            >
              <div
                class="MuiGrid-root aboutLeadBlock LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
                >
                  <div
                    class="LeadBlockContentSection"
                  >
                    <div
                      class="MuiTypography-root Typography MuiTypography-body1"
                    >
                      Long Dec System 2 NO
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-labelledby="tab-two"
      class="MuiGrid-root TabPanel MuiGrid-item"
      heading="MC: sdp.leadBlock.technicalSpecification"
      hidden=""
      id="tabpanel-two"
      role="tabpanel"
    >
      <div
        class="MuiBox-root MuiBox-root-9 TabPanelBox"
      >
        <div
          class="section Section Section--white"
        >
          <div
            class="Container"
          >
            <div
              class="MuiContainer-root MuiContainer-maxWidthXl"
            >
              <div
                class="MuiGrid-root LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <div
                  class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
                >
                  <div
                    class="LeadBlockContentSection"
                  >
                    <div
                      class="SystemDetailsTechnicalSpec"
                    >
                      <div>
                        <table
                          class="MuiTable-root Table Table--row-even-color"
                        >
                          <thead
                            class="MuiTableHead-root ColorPair ColorPair--pearl"
                          >
                            <tr
                              class="MuiTableRow-root MuiTableRow-head"
                            >
                              <th
                                class="MuiTableCell-root MuiTableCell-head"
                                scope="col"
                              >
                                systemAttributes
                              </th>
                              <th
                                class="MuiTableCell-root MuiTableCell-head"
                                scope="col"
                              />
                            </tr>
                          </thead>
                          <tbody
                            class="MuiTableBody-root"
                          >
                            <tr
                              class="MuiTableRow-root"
                            >
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft"
                              >
                                Promotional Content
                              </td>
                              <td
                                class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight"
                              >
                                accordion item value 1 
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render documents and downloads 1`] = `
<div
  aria-labelledby="tab-three"
  class="MuiGrid-root TabPanel MuiGrid-item"
  heading="MC: sdp.leadBlock.documentsAndDownloads"
  hidden=""
  id="tabpanel-three"
  role="tabpanel"
>
  <div
    class="MuiBox-root MuiBox-root-18 TabPanelBox"
  >
    <div
      class="section Section Section--white"
    >
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <div
            class="section"
          >
            <div
              class="content"
            >
              <div>
                <div
                  class="tableContainer"
                >
                  <div
                    class="DocumentSimpleTableResults"
                  >
                    <div>
                      <table
                        class="MuiTable-root Table Table--row-no-color"
                      >
                        <thead
                          class="MuiTableHead-root ColorPair ColorPair--pearl"
                        >
                          <tr
                            class="MuiTableRow-root MuiTableRow-head"
                          >
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              MC: documentLibrary.headers.type
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head"
                              scope="col"
                            >
                              MC: documentLibrary.headers.title
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head table-header"
                              scope="col"
                            >
                              MC: documentLibrary.headers.download
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head table-header"
                              scope="col"
                            >
                              MC: documentLibrary.headers.add
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="MuiTableBody-root"
                        >
                          <tr
                            class="MuiTableRow-root row"
                          >
                            <td
                              class="MuiTableCell-root MuiTableCell-body table-cell"
                            >
                              CAD name
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body table-cell"
                            >
                              title
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body table-cell MuiTableCell-alignLeft"
                            >
                              <a
                                aria-disabled="false"
                                class="MuiButtonBase-root MuiButton-root buttonStyles-root-19 MuiButton-text buttonStyles-text-20 MuiButton-textPrimary"
                                data-gtm="{\\"id\\":\\"download1\\",\\"label\\":\\"Download\\",\\"action\\":\\"https://bmipimngqa.azureedge.net/sys-master-hybris-media/h92/h36/9012208173086/1344416763pdf\\"}"
                                href="https://bmipimngqa.azureedge.net/sys-master-hybris-media/h92/h36/9012208173086/1344416763pdf"
                                rel="noopener noreferrer"
                                tabindex="0"
                                target="_blank"
                              >
                                <span
                                  class="MuiButton-label buttonStyles-label-22"
                                >
                                  <span
                                    class="MuiButton-startIcon buttonStyles-startIcon-23 MuiButton-iconSizeMedium"
                                  >
                                    <svg
                                      class="download-icon"
                                    />
                                  </span>
                                  264.2 KB
                                </span>
                                <span
                                  class="MuiTouchRipple-root"
                                />
                              </a>
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body table-cell MuiTableCell-alignCenter"
                            >
                              <span
                                class=""
                              >
                                <div
                                  class="MuiFormControl-root Checkbox"
                                >
                                  <label
                                    class="MuiFormControlLabel-root"
                                  >
                                    <span
                                      aria-disabled="false"
                                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-39 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
                                    >
                                      <span
                                        class="MuiIconButton-label"
                                      >
                                        <input
                                          aria-label="MC: documentLibrary.download title"
                                          class="PrivateSwitchBase-input-42"
                                          data-indeterminate="false"
                                          name="0"
                                          type="checkbox"
                                          value=""
                                        />
                                        <svg
                                          aria-hidden="true"
                                          class="MuiSvgIcon-root"
                                          focusable="false"
                                          viewBox="0 0 24 24"
                                        >
                                          <path
                                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                          />
                                        </svg>
                                      </span>
                                      <span
                                        class="MuiTouchRipple-root"
                                      />
                                    </span>
                                    <span
                                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                                    />
                                  </label>
                                </div>
                              </span>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <div
                  class="DocumentResultsFooter"
                >
                  <nav
                    aria-label="pagination navigation"
                    class="MuiPagination-root pagination docResultsFooterStyles-paginationRoot-43"
                  >
                    <ul
                      class="MuiPagination-ul"
                    >
                      <li>
                        <button
                          aria-label="Go to previous page"
                          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page PaginationItem MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiPaginationItem-icon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                            />
                          </svg>
                        </button>
                      </li>
                      <li />
                      <li>
                        <button
                          aria-label="Go to next page"
                          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page PaginationItem MuiPaginationItem-textPrimary Mui-disabled Mui-disabled"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiPaginationItem-icon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                            />
                          </svg>
                        </button>
                      </li>
                    </ul>
                  </nav>
                  <a
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover clear-downloads Anchorlink MuiTypography-colorPrimary"
                    type="button"
                  >
                    <span>
                      MC: downloadList.clear
                    </span>
                  </a>
                  <button
                    class="MuiButtonBase-root MuiButton-root buttonStyles-root-19 MuiButton-contained buttonStyles-contained-21 MuiButton-containedPrimary"
                    data-gtm="{\\"id\\":\\"download3-button1\\",\\"label\\":\\"MC: downloadList.download (0)\\",\\"action\\":\\"[]\\"}"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label buttonStyles-label-22"
                    >
                      MC: downloadList.download (0)
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <p
                    class="MuiTypography-root RecaptchaPrivacyLinks Typography MuiTypography-body1"
                  >
                    This site is protected by reCAPTCHA and the Google 
                    <a
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
                      href="https://policies.google.com/privacy"
                      rel="noreferrer noopener"
                      target="_blank"
                    >
                      <span>
                        Privacy Policy
                      </span>
                    </a>
                     and 
                    <a
                      class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
                      href="https://policies.google.com/terms"
                      rel="noreferrer noopener"
                      target="_blank"
                    >
                      <span>
                        Terms of Service
                      </span>
                    </a>
                     apply.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabLeadBlock tests should render the bimIframe tab 1`] = `
<div
  aria-labelledby="tab-four"
  class="MuiGrid-root TabPanel MuiGrid-item"
  heading="MC: sdp.tabs.bim"
  hidden=""
  id="tabpanel-four"
  role="tabpanel"
>
  <div
    class="MuiBox-root MuiBox-root-68 TabPanelBox"
  >
    <div
      class="bimLeadBlock"
    >
      <div
        class="section Section Section--pearl"
      >
        <div
          class="Container"
        >
          <div
            class="MuiContainer-root MuiContainer-maxWidthXl"
          >
            <div
              class="MuiGrid-root LeadBlock MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <div
                class="MuiGrid-root LeadBlockContent MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
              >
                <div
                  class="LeadBlockContentSection"
                >
                  <h5
                    class="MuiTypography-root LeadBlockContentHeading Typography MuiTypography-h5"
                  >
                    <h2
                      class="MuiTypography-root Typography Typography--underline MuiTypography-h2"
                    >
                      bmi iframe title
                    </h2>
                  </h5>
                </div>
                <div
                  class="LeadBlockContentSection"
                >
                  <div
                    class="RichText"
                  />
                </div>
              </div>
              <iframe
                class="assetsIframe bmiIframe"
                data-testid="bmi-iframe"
                src="https://google.com"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
